--- a/index.html
+++ b/index.html
@@ -7,4 +7,6 @@
         <title>хватит убирать медведя с обоев</title>
   </head>
 <body>
-<img src="ya-vam-zapreshayu.jpg
+  <img src="https://github.com/bat1skaf/bat1skaf.github.io/blob/main/ya_vam_zapreshayu%20(1).png
+</body>
+</html>          
